Add table to homepage

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
     <link href="assets/css/style.css" rel="stylesheet"/>
     <link href="assets/css/homepage.css" rel="stylesheet"/>
-    <link href="assets/css/tableau.css" rel="stylesheet">
+    <link href="assets/css/table.css" rel="stylesheet">
     <!-- Swiper CSS -->
     <link href="https://unpkg.com/swiper/swiper-bundle.min.css" rel="stylesheet">
 </head>
@@ -119,10 +119,10 @@
                 <div class="swiper-button-next"></div>
             </div>
 
-            <div class="tableau__wrapper">
-                <div class="tableau-grid">
+            <div class="table__wrapper">
+                <div class="table-grid">
                     <div class="title">ETH
-                        <svg class="tableau__logo" image-rendering="optimizeQuality"
+                        <svg class="table__logo" image-rendering="optimizeQuality"
                              shape-rendering="geometricPrecision" text-rendering="geometricPrecision"
                              viewBox="0 0 784.37 1277.39"
                              xmlns="http://www.w3.org/2000/svg">
@@ -138,7 +138,7 @@
 
                     </div>
                     <div class="title">XRP
-                        <svg class="tableau__logo" viewBox="0 0 512 424" xmlns="http://www.w3.org/2000/svg">
+                        <svg class="table__logo" viewBox="0 0 512 424" xmlns="http://www.w3.org/2000/svg">
                             <path d="M437,0h74L357,152.48c-55.77,55.19-146.19,55.19-202,0L.94,0H75L192,115.83a91.11,91.11,0,0,0,127.91,0Z"
                                   fill="#23292f"/>
                             <path d="M74.05,424H0L155,270.58c55.77-55.19,146.19-55.19,202,0L512,424H438L320,307.23a91.11,91.11,0,0,0-127.91,0Z"
@@ -146,7 +146,7 @@
                         </svg>
                     </div>
                     <div class="title">ATOM
-                        <svg class="tableau__logo" viewBox="0 0 2500 2500" xmlns="http://www.w3.org/2000/svg">
+                        <svg class="table__logo" viewBox="0 0 2500 2500" xmlns="http://www.w3.org/2000/svg">
                             <circle cx="1250" cy="1250" fill="#2e3148" r="1250"/>
                             <circle cx="1250" cy="1250" fill="#1b1e36" r="725.31"/>
                             <path d="M1252.57,159.47c-134.93,0-244.34,489.4-244.34,1093.11s109.41,1093.11,244.34,1093.11,244.34-489.4,244.34-1093.11S1387.5,159.47,1252.57,159.47ZM1269.44,2284c-15.43,20.58-30.86,5.14-30.86,5.14-62.14-72-93.21-205.76-93.21-205.76-108.69-349.79-82.82-1100.82-82.82-1100.82,51.08-596.24,144-737.09,175.62-768.36a19.29,19.29,0,0,1,24.74-2c45.88,32.51,84.36,168.47,84.36,168.47,113.63,421.81,103.34,817.9,103.34,817.9,10.29,344.65-56.94,730.45-56.94,730.45C1341.92,2222.22,1269.44,2284,1269.44,2284Z"
@@ -163,7 +163,7 @@
 
                     </div>
                     <div class="title">BTC
-                        <svg class="tableau__logo" image-rendering="optimizeQuality"
+                        <svg class="table__logo" image-rendering="optimizeQuality"
                              shape-rendering="geometricPrecision"
                              text-rendering="geometricPrecision"
                              viewBox="0 0 4091.27 4091.73"
@@ -175,14 +175,14 @@
                         </svg>
                     </div>
                     <div class="title">LTC
-                        <svg class="tableau__logo" viewBox="0 0 82.6 82.6" xmlns="http://www.w3.org/2000/svg">
+                        <svg class="table__logo" viewBox="0 0 82.6 82.6" xmlns="http://www.w3.org/2000/svg">
                             <circle cx="41.3" cy="41.3" fill="#ffffff" r="36.83"/>
                             <path d="M41.3,0A41.3,41.3,0,1,0,82.6,41.3h0A41.18,41.18,0,0,0,41.54,0ZM42,42.7,37.7,57.2h23a1.16,1.16,0,0,1,1.2,1.12v.38l-2,6.9a1.49,1.49,0,0,1-1.5,1.1H23.2l5.9-20.1-6.6,2L24,44l6.6-2,8.3-28.2a1.51,1.51,0,0,1,1.5-1.1h8.9a1.16,1.16,0,0,1,1.2,1.12v.38L43.5,38l6.6-2-1.4,4.8Z"
                                   fill="#345D9D"/>
                         </svg>
                     </div>
                     <div class="title">BNB
-                        <svg class="tableau__logo" viewBox="0 0 2500.01 2500" xmlns="http://www.w3.org/2000/svg">
+                        <svg class="table__logo" viewBox="0 0 2500.01 2500" xmlns="http://www.w3.org/2000/svg">
                             <path d="M764.48,1050.52,1250,565l485.75,485.73,282.5-282.5L1250,0,482,768l282.49,282.5M0,1250,282.51,967.45,565,1249.94,282.49,1532.45Zm764.48,199.51L1250,1935l485.74-485.72,282.65,282.35-.14.15L1250,2500,482,1732l-.4-.4,282.91-282.12M1935,1250.12l282.51-282.51L2500,1250.1,2217.5,1532.61Z"
                                   fill="#F3BA2F"/>
                             <path d="M1536.52,1249.85h.12L1250,963.19,1038.13,1175h0l-24.34,24.35-50.2,50.21-.4.39.4.41L1250,1536.81l286.66-286.66.14-.16-.26-.14"
@@ -190,12 +190,12 @@
                         </svg>
                     </div>
 
-                    <div class="tableau__price" id="ethPrice"></div>
-                    <div class="tableau__price" id="xrpPrice"></div>
-                    <div class="tableau__price" id="atomPrice"></div>
-                    <div class="tableau__price" id="btcPrice"></div>
-                    <div class="tableau__price" id="ltcPrice"></div>
-                    <div class="tableau__price" id="bnbPrice"></div>
+                    <div class="table__price" id="ethPrice"></div>
+                    <div class="table__price" id="xrpPrice"></div>
+                    <div class="table__price" id="atomPrice"></div>
+                    <div class="table__price" id="btcPrice"></div>
+                    <div class="table__price" id="ltcPrice"></div>
+                    <div class="table__price" id="bnbPrice"></div>
                 </div>
                 <div class="filters">
                     <div class="currencyChoose">
@@ -250,6 +250,6 @@
     <!-- <script src="./assets/js/darkmode.js"></script> -->
     <script src="assets/js/script.js"></script>
     <script src="assets/js/darkmode.js"></script>
-    <script src="assets/js/tableau.js"></script>
+    <script src="assets/js/table.js"></script>
 </body>
 </html>
