--- a/src/tableau.html
+++ b/src/tableau.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <link href="../assets/css/tableau.css" rel="stylesheet">
+    <link href="../assets/css/table.css" rel="stylesheet">
     <link href="https://fonts.gstatic.com" rel="preconnect">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
     <title>WildCoin</title>
@@ -47,6 +47,6 @@
                 </select>
             </div>
         </div>
-        <script src="../assets/js/tableau.js"></script>
+        <script src="../assets/js/table.js"></script>
 </body>
 </html>
