--- a/src/contact.html
+++ b/src/contact.html
@@ -5,6 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <link rel="preconnect" href="https://fonts.gstatic.com" />
+<link rel="stylesheet" href="../assets/css/variables.css"/>
 <link rel="stylesheet" href="../assets/css/style.css"/>
 <link rel="stylesheet" href="../assets/css/contact.css"/>
 <title>WildCoin:contact</title>
@@ -58,24 +59,26 @@
                 </nav>
             </div>
         </header>
+        <h2>Contactez-nous</h2>
         <div id="contact-form-card">
             <form>
-                <h2>Contactez-nous</h2>
                 <div id="name-cont" class="complet">
-                    <label for="name">Nom :</label>
+                    <label class="label" for="name">Nom :</label>
                     <input type="text" id="name" name="user_name">
                 </div>
                 <div id="mail-cont" class="complet">
-                    <label for="mail">e-mail :</label>
+                    <label class="label" for="mail">e-mail :</label>
                     <input type="email" id="mail" name="user_mail">
                 </div>
                 <div id="msg-cont" class="complet">
-                    <label for="msg">Message :</label>
+                    <label class="label" for="msg">Message :</label>
                     <textarea id="msg" name="user_message"></textarea>
                 </div>
                 <button class="button" id="button">Envoyer</button>
             </form>
-            <div class="hidden modal"><p></p></div>
+            <div class="popup-container hidden-container">
+                <div class="hidden modal"><p></p></div>
+            </div>
         </div>
         <footer>
             <div class="footer-content">
