article.html darkmod fix

--- a/src/articles.html
+++ b/src/articles.html
@@ -14,7 +14,7 @@
 
 <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.bundle.js"></script>
-    <title>Article</title>
+    <title>WildCoin Arcicle</title>
 </head>
 <body>
 
@@ -42,7 +42,7 @@
         />
       </a>
 
-        <!-- <a class="coin" href="index.html">wildcoin</a> -->
+       
       </div>
       <nav class="nav-menu" id="nav-menu">
         <ul class="nav-slider">
@@ -160,7 +160,7 @@
                   <img class="carousel__photo" src="../assets/img/carousel_article/turtledex.png">
                   <img class="carousel__photo" src="../assets/img/carousel_article/etf.png">
                   <img class="carousel__photo" src="../assets/img/carousel_article/scam.png">
-<!--                  <img class="carousel__photo" src="../assets/img/carousel_article/Capture d’écran 2021-03-23 à 14.34.03.png">-->
+
                   <img class="carousel__photo" src="../assets/img/carousel_article/swiss.png">
                   <img class="carousel__photo" src="../assets/img/carousel_article/precursor.png">
                   <img class="carousel__photo" src="../assets/img/carousel_article/brave.png">
