--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             </div>
         </div>
 
-        <div class="flex">
+        <div class="flex table__select">
             <div class="flex swiper-container">
                 <div class="swiper-wrapper"></div>
                 <div class="swiper-pagination"></div>
@@ -243,10 +243,7 @@
     <!--    <script src="assets/js/carousel/carousel.homepage.js"></script>-->
     <script src="assets/js/carousel.homepage.js"></script>
     <script src="assets/js/shortcuts.homepage.js"></script>
-    <script
-            data-auto-replace-svg="nest"
-            src="https://use.fontawesome.com/releases/v5.15.2/js/all.js"
-    ></script>
+    <script data-auto-replace-svg="nest" src="https://use.fontawesome.com/releases/v5.15.2/js/all.js"></script>
     <!-- <script src="./assets/js/darkmode.js"></script> -->
     <script src="assets/js/script.js"></script>
     <script src="assets/js/darkmode.js"></script>
