--- a/src/articles.html
+++ b/src/articles.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="theme-light">
+<html lang="fr" class="theme-light">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -96,11 +96,11 @@
 
         </div>
 
-        <div id="invisi-div"></div>
+        <div></div>
         <div id="navGrail">
 
         </div>
-        <div id="invisi-div"></div>
+        <div></div>
         <div id="aside-left">
             <div id="tableauSurvey" class="tableauSurvey">
                 <container class="container_2">
@@ -109,7 +109,7 @@
                       <card class="asset-info">
                         <div class="title"></div>
                         <div class="details">
-                          <h2 class="asset-price" id="myPrice"></h2>
+                          <h2 class="asset-price" id="myPrice">MY PRICE</h2>
                         </div>
                       </card>
                       <canvas id="myChart"></canvas>
@@ -153,19 +153,19 @@
 
               <div class="carousel-wrapper">
                 <div class="carousel">
-                  <img class="carousel__photo initial" src="../assets/img/carousel_article/citibank.png">
-                  <img class="carousel__photo" src="../assets/img/carousel_article/solana.png">
-                  <img class="carousel__photo" src="../assets/img/carousel_article/nft.png">
-                  <img class="carousel__photo" src="../assets/img/carousel_article/ripple.png">
-                  <img class="carousel__photo" src="../assets/img/carousel_article/turtledex.png">
-                  <img class="carousel__photo" src="../assets/img/carousel_article/etf.png">
-                  <img class="carousel__photo" src="../assets/img/carousel_article/scam.png">
+                  <img class="carousel__photo initial" src="../assets/img/carousel_article/citibank.png" alt="article_photo_placeholder">
+                  <img class="carousel__photo" src="../assets/img/carousel_article/solana.png" alt="article_photo_placeholder">
+                  <img class="carousel__photo" src="../assets/img/carousel_article/nft.png" alt="article_photo_placeholder">
+                  <img class="carousel__photo" src="../assets/img/carousel_article/ripple.png" alt="article_photo_placeholder">
+                  <img class="carousel__photo" src="../assets/img/carousel_article/turtledex.png" alt="article_photo_placeholder">
+                  <img class="carousel__photo" src="../assets/img/carousel_article/etf.png" alt="article_photo_placeholder">
+                  <img class="carousel__photo" src="../assets/img/carousel_article/scam.png" alt="article_photo_placeholder">
 
-                  <img class="carousel__photo" src="../assets/img/carousel_article/swiss.png">
-                  <img class="carousel__photo" src="../assets/img/carousel_article/precursor.png">
-                  <img class="carousel__photo" src="../assets/img/carousel_article/brave.png">
-                  <img class="carousel__photo" src="../assets/img/carousel_article/bull-run.png">
-                  <img class="carousel__photo" src="../assets/img/carousel_article/swap.png">
+                  <img class="carousel__photo" src="../assets/img/carousel_article/swiss.png" alt="article_photo_placeholder">
+                  <img class="carousel__photo" src="../assets/img/carousel_article/precursor.png" alt="article_photo_placeholder">
+                  <img class="carousel__photo" src="../assets/img/carousel_article/brave.png" alt="article_photo_placeholder">
+                  <img class="carousel__photo" src="../assets/img/carousel_article/bull-run.png" alt="article_photo_placeholder">
+                  <img class="carousel__photo" src="../assets/img/carousel_article/swap.png" alt="article_photo_placeholder">
 
 
 
@@ -215,7 +215,7 @@
 <br>
     J’espère avoir été utile pour comprendre le fonctionnement du mécanisme de validation des transactions du réseau Bitcoin. Si vous avez des questions, vous pouvez poster un commentaire et me contacter, je resterai disponible. Je suis également heureux si vous souhaitez me joindre sur mon site web ou sur mon linkedin.
 
-                </p>
+              
             </article>
             <article>
                 <img src="../assets/img/jami.png" alt="">
@@ -258,12 +258,12 @@
                    <br>
                    jami est disponible pour windows, linux, android, ios et est facile à installer. Le logiciel est disponible à l’adresse https://jami.net/ où vous pouvez également trouver des informations sur l’installation qui, comme mentionné, est très simple. Vous trouverez également un accès au dépôt de code source qui est ouvert.
                    <br>
-                   J’espère avoir fourni des informations et des ressources à forte valeur ajoutée et avoir été utile. Si vous le souhaitez, vous pouvez me contacter pour toute question ou précision concernant mon profil sur linkedin ou vous pouvez me contacter et me suivre et soutenir sur patreon  avec des conseils et du contenu exclusif.</p>
+                   J’espère avoir fourni des informations et des ressources à forte valeur ajoutée et avoir été utile. Si vous le souhaitez, vous pouvez me contacter pour toute question ou précision concernant mon profil sur linkedin ou vous pouvez me contacter et me suivre et soutenir sur patreon  avec des conseils et du contenu exclusif.
             </article>
         </div>
 
 
-        <div id="aside-left" class="holy-aside">
+        <div class="holy-aside">
           <h2>ARTICLES RÉCENTS</h2>
           <ul>
               <li><a href="#">Proof of Work (POW). Pourquoi cela fait-il la puissance du réseau Bitcoin ?</a></li>
