--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     <p class="article__description small">
                         Cryptocurrencies let you buy goods and services, or trade them for profit.
                         Here's more about what cryptocurrency is, how to buy it and how to protect yourself.
-                        <a href="">Read more</a>
+                        <a href="./src/articles.html#crypto">Read more</a>
                     </p>
                 </div>
             </div>
@@ -92,7 +92,7 @@
                         Naturally, the first person to ever give an answer to the question
                         “What is blockchain?” was Satoshi Nakamoto,
                         the enigmatic inventor of Bitcoin
-                        <a href="">Read more</a>
+                        <a href="./src/articles.html#blockchain">Read more</a>
                     </p>
                 </div>
             </div>
@@ -105,7 +105,7 @@
                     <p class="article__description small">
                         Nvidia made a mistake while updating their software,
                         allowing mining of the cryptocurrency named Ether (ETH) on their graphic cards.
-                        <a href="">Read more</a>
+                        <a href="./src/articles.html#nvidia">Read more</a>
                     </p>
                 </div>
             </div>
