--- a/src/articles.html
+++ b/src/articles.html
@@ -260,6 +260,42 @@
                    <br>
                    J’espère avoir fourni des informations et des ressources à forte valeur ajoutée et avoir été utile. Si vous le souhaitez, vous pouvez me contacter pour toute question ou précision concernant mon profil sur linkedin ou vous pouvez me contacter et me suivre et soutenir sur patreon  avec des conseils et du contenu exclusif.
             </article>
+            <article id="crypto">
+             <h1> What is cryptocurrency?</h1>
+Cryptocurrency is a form of payment that can be exchanged online for goods and services. Many companies have issued their own currencies, often called tokens, and these can be traded specifically for the good or service that the company provides. Think of them as you would arcade tokens or casino chips. You’ll need to exchange real currency for the cryptocurrency to access the good or service.
+
+Cryptocurrencies work using a technology called blockchain. Blockchain is a decentralized technology spread across many computers that manages and records transactions. Part of the appeal of this technology is its security.
+            </article>
+            <article id="blockchain">
+              <h1>What's a blockchain ?</h1>
+              A blockchain is a growing list of records, called blocks, that are linked using cryptography.Each block contains a cryptographic hash of the previous block, a timestamp, and transaction data (generally represented as a Merkle tree). By design, a blockchain is resistant to modification of its data. This is because once recorded, the data in any given block cannot be altered retroactively without alteration of all subsequent blocks.
+                <br>
+For use as a distributed ledger, a blockchain is typically managed by a peer-to-peer network collectively adhering to a protocol for inter-node communication and validating new blocks. Although blockchain records are not unalterable, blockchains may be considered secure by design and exemplify a distributed computing system with high Byzantine fault tolerance. The blockchain has been described as "an open, distributed ledger that can record transactions between two parties efficiently and in a verifiable and permanent way".
+              <br>
+The blockchain was invented by a person (or group of people) using the name Satoshi Nakamoto in 2008 to serve as the public transaction ledger of the cryptocurrency bitcoin.
+<br> The identity of Satoshi Nakamoto remains unknown to date. The invention of the blockchain for bitcoin made it the first digital currency to solve the double-spending problem without the need of a trusted authority or central server. The bitcoin design has inspired other applications and blockchains that are readable by the public and are widely used by cryptocurrencies. The blockchain is considered a type of payment rail.Private blockchains have been proposed for business use but Computerworld called the marketing of such privatized blockchains without a proper security model "snake oil".However, others have argued that permissioned blockchains, if carefully designed, may be more decentralized and therefore secure in practice than permissionless ones.
+            </article>
+
+            <article id="nvidia">
+              <h1>RTX 3060 Ether mining accidentally unlocked by Nvidia’s own update</h1>
+              A software update released by Nvidia inadvertently bypassed the Ether (ETH) mining block the firm placed on its own GeForce RTX 3060 graphics card.
+<br>
+A spokesperson for Nvidia confirmed on Tuesday that the latest 470.05 driver update was mistakenly released with code intended for use only by Nvidia developers, which allowed for the removal of the hash rate limiter.
+<br>
+“A developer driver inadvertently included code used for internal development which removes the hash rate limiter on RTX 3060 in some configurations,” said an Nvidia spokesperson, as reported by The Verge.
+<br>
+In February, Nvidia decided to intentionally hamper the Ether-mining effectiveness of its RTX 3060 series graphics cards to prevent a demand-induced shortage caused by crypto miners. A three-way handshake between the hardware, the software and the computer firmware was supposed to ensure that the card recognized when it was being used to mine Ether and cut its computational power in half, from 50 megahertz per second to 25 MH/s.
+<br>
+But the back door that allowed the card’s hash rate limiter to be bypassed came from the software side, and it was released by Nvidia itself. The offending beta update has since been pulled by the software company, but versions of it have already made it out onto the internet.
+<br>
+Elsewhere on Tuesday, Andreas Schilling of tech website HardwareLuxx tested reports that custom edits to a computer’s BIOS were required to bypass the hash rate limiter. After testing driver 470.05 with a custom and standard BIOS, Schilling confirmed that no special modifications were required and that Nvidia’s driver removed the hash rate limiter itself.
+<br>
+While the news only compounds the misery of gamers waiting to upgrade their graphics cards, the gaffe by Nvidia might not necessarily result in Ether miners eating up the next supply of GPU shipments. According to Hexus, the latest reports suggest that the affected driver can only unlock one RTX 3060 at a time, rendering it unsuitable for use in large mining-farms, for the time being at least.
+<br>
+Initial rumors suggested a custom modification had bypassed the RTX 3060’s hash rate limiter last Wednesday, allowing it to mine Ether at full capacity. It was later revealed that the mod had not enabled the card to mine Ether specifically but had been rigged to enable the mining of another GPU-mineable cryptocurrency, Ravencoin (RVN).
+
+
+            </article>
         </div>
 
 
