--- a/index.html
+++ b/index.html
@@ -98,13 +98,14 @@
             </div>
 
             <div class="article__wrapper">
-                <h2 class="article__title">Nvidia enables Ether mining</h2>
+                <h2 class="article__title">The history of Bitcoin</h2>
 
                 <div class="article__access flex">
                     <img alt="A Bitcoin" class="article__img" src="assets/img/nvidia.webp" width="64">
                     <p class="article__description small">
-                        Nvidia made a mistake while updating their software,
-                        allowing mining of the cryptocurrency named Ether (ETH) on their graphic cards.
+                        The underlying data structure of Bitcoin (BTC), often referred
+                        to as the blockchain, has also been researched and implemented in use cases ranging from supply
+                        chain management to logistics, and much more.
                         <a href="">Read more</a>
                     </p>
                 </div>
