🐛 FIX: Nvidia text

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             </div>
 
             <div class="article__wrapper">
-                <h2 class="article__title">The history of Bitcoin</h2>
+                <h2 class="article__title">Nvidia enabled Ethereum mining</h2>
 
                 <div class="article__access flex">
                     <img alt="A Bitcoin" class="article__img" src="assets/img/nvidia.webp" width="64">
