--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                     <img alt="A Bitcoin" class="article__img" src="assets/img/nvidia.webp" width="64">
                     <p class="article__description small">
                         Nvidia made a mistake while updating their software,
-                        allowing mining of the cryptocurrency named Ether (ETH) on their graphic cards.
+                        allowing mining of the cryptocurrency named Ethereum (ETH) on their graphic cards.
                         <a href="./src/articles.html#nvidia">Read more</a>
                     </p>
                 </div>
