--- a/src/articles.html
+++ b/src/articles.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr" class="theme-light">
+<html lang="en" class="theme-light">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -262,13 +262,21 @@
             </article>
             <article id="crypto">
              <h1> What is cryptocurrency?</h1>
-Cryptocurrency is a form of payment that can be exchanged online for goods and services. Many companies have issued their own currencies, often called tokens, and these can be traded specifically for the good or service that the company provides. Think of them as you would arcade tokens or casino chips. You’ll need to exchange real currency for the cryptocurrency to access the good or service.
-
+Cryptocurrency is a form of payment that can be exchanged online for goods and services. 
+<br>
+Many companies have issued their own currencies, often called tokens, and these can be traded specifically for the good or service that the company provides.
+<br>
+Think of them as you would arcade tokens or casino chips. You’ll need to exchange real currency for the cryptocurrency to access the good or service.
+<br>
 Cryptocurrencies work using a technology called blockchain. Blockchain is a decentralized technology spread across many computers that manages and records transactions. Part of the appeal of this technology is its security.
             </article>
             <article id="blockchain">
               <h1>What's a blockchain ?</h1>
-              A blockchain is a growing list of records, called blocks, that are linked using cryptography.Each block contains a cryptographic hash of the previous block, a timestamp, and transaction data (generally represented as a Merkle tree). By design, a blockchain is resistant to modification of its data. This is because once recorded, the data in any given block cannot be altered retroactively without alteration of all subsequent blocks.
+              A blockchain is a growing list of records, called blocks, that are linked using cryptography.
+              <br>
+              Each block contains a cryptographic hash of the previous block, a timestamp, and transaction data (generally represented as a Merkle tree). 
+              <br>
+              By design, a blockchain is resistant to modification of its data. This is because once recorded, the data in any given block cannot be altered retroactively without alteration of all subsequent blocks.
                 <br>
 For use as a distributed ledger, a blockchain is typically managed by a peer-to-peer network collectively adhering to a protocol for inter-node communication and validating new blocks. Although blockchain records are not unalterable, blockchains may be considered secure by design and exemplify a distributed computing system with high Byzantine fault tolerance. The blockchain has been described as "an open, distributed ledger that can record transactions between two parties efficiently and in a verifiable and permanent way".
               <br>
