--- a/src/team.html
+++ b/src/team.html
@@ -40,16 +40,16 @@
       <nav class="nav-menu" id="nav-menu">
         <ul class="nav-slider">
           <li class="nav-slider-item">
-            <a href="../index.html">Accueil</a>
+            <a href="../index.html">Home</a>
           </li>
           <li class="nav-slider-item">
             <a href="./articles.html">Articles</a>
           </li>
           <li class="nav-slider-item">
-            <a href="ratings.html">Cours</a>
+            <a href="ratings.html">Ratings</a>
           </li>
           <li class="nav-slider-item">
-            <a href="team.html">Equipe</a>
+            <a href="team.html">Team</a>
           </li>
           <li class="nav-slider-item">
               <a href=""></a>
@@ -84,7 +84,7 @@
                 <ul class="footer-contact"> 
                     <li class="footer-contact-item">
                         <a href="../src/contact.html">
-                          Contactez-nous
+                          Contact-us
                         </a>
                     </li>
                 </ul>
