--- a/index.html
+++ b/index.html
@@ -47,16 +47,16 @@
             <nav class="nav-menu" id="nav-menu">
                 <ul class="nav-slider">
                     <li class="nav-slider-item">
-                        <a href="index.html">Accueil</a>
+                        <a href="index.html">Home</a>
                     </li>
                     <li class="nav-slider-item">
                         <a href="src/articles.html">Articles</a>
                     </li>
                     <li class="nav-slider-item">
-                        <a href="src/ratings.html">Cours</a>
+                        <a href="src/ratings.html">Ratings</a>
                     </li>
                     <li class="nav-slider-item">
-                        <a href="src/team.html">Equipe</a>
+                        <a href="src/team.html">Team</a>
                     </li>
                     <li class="nav-slider-item">
                         <a href=""></a>
@@ -216,7 +216,7 @@
             <ul class="footer-contact">
                 <li class="footer-contact-item">
                     <a href="src/contact.html">
-                        Contactez-nous
+                        Contact-us
                     </a>
                 </li>
             </ul>
