--- a/src/contact.html
+++ b/src/contact.html
@@ -42,16 +42,16 @@
                 <nav class="nav-menu" id="nav-menu">
                     <ul class="nav-slider">
                         <li class="nav-slider-item">
-                            <a href="../index.html">Accueil</a>
+                            <a href="../index.html">Home</a>
                         </li>
                         <li class="nav-slider-item">
                             <a href="../src/articles.html">Articles</a>
                         </li>
                         <li class="nav-slider-item">
-                            <a href="../src/ratings.html">Cours</a>
+                            <a href="../src/ratings.html">Ratings</a>
                         </li>
                         <li class="nav-slider-item">
-                            <a href="../src/team.html">Equipe</a>
+                            <a href="../src/team.html">Team</a>
                         </li>
                         <li class="nav-slider-item">
                             <a href=""></a>
@@ -86,7 +86,7 @@
                 <ul class="footer-contact">
                     <li class="footer-contact-item">
                         <a href="contact.html">
-                            Contactez-nous
+                            Contact-us
                         </a>
                     </li>
                 </ul>
