Translate content in team and contact pages

--- a/src/team.html
+++ b/src/team.html
@@ -60,19 +60,19 @@
 </header>
     <div id="body-container">
         
-        <h2 class="team-title">La Team</h2>
+        <h2 class="team-title">The Team</h2>
 
         <main id="main-container" class="container">
         
         </main>
         <section class="text-container">
-            <h3>A propos de nous</h3>
+            <h3>About us</h3>
             <p class="text">
                 Candy canes gummi bears cake jelly beans gingerbread gingerbread toffee. Tiramisu macaroon chocolate bar sweet sesame snaps jelly cheesecake icing. Tiramisu sugar plum fruitcake cake halvah dessert. Jelly bonbon marzipan sweet roll bonbon pie cheesecake chocolate chocolate. Chupa chups pie jelly-o brownie marshmallow halvah chocolate bar wafer dessert. Tootsie roll brownie gummi bears. Chupa chups cookie pastry topping jelly beans. Bear claw sweet caramels cookie tootsie roll jelly beans lollipop.
                 Jelly beans jelly-o cotton candy chupa chups croissant cotton candy bonbon chocolate candy. Soufflé gingerbread jelly tiramisu pie pie tart. Cotton candy cotton candy carrot cake cake bear claw apple pie cookie sweet. Candy dragée sesame snaps lollipop. Ice cream marzipan jelly-o carrot cake. Pudding gummies chupa chups pie pie dessert biscuit. Cookie marshmallow chocolate icing marzipan carrot cake halvah.
                 Cheesecake jelly-o caramels carrot cake gummies liquorice brownie. Bear claw oat cake chocolate cake tiramisu soufflé apple pie sesame snaps. Wafer ice cream cheesecake sesame snaps sweet roll chupa chups sugar plum marshmallow. Lollipop cheesecake jelly-o cookie dessert fruitcake chocolate bar powder soufflé. Dessert sweet roll caramels ice cream jelly beans sugar plum cookie. Liquorice oat cake bear claw chocolate bar gummi bears. Jujubes pie tootsie roll caramels lemon drops chupa chups apple pie. Chocolate cake brownie gummies liquorice pie marzipan jelly beans jujubes.
             </p>
-            <h3>Notre vision</h3>
+            <h3>Our vision</h3>
             <p class="text">
                 Cake bear claw sesame snaps cookie donut jelly beans chupa chups. Cake pudding candy canes sweet roll pudding oat cake tootsie roll chocolate bar. Candy canes topping soufflé danish gummi bears chocolate lollipop. Muffin liquorice sesame snaps sugar plum chocolate cake chocolate bar pudding fruitcake. Ice cream croissant halvah halvah biscuit toffee danish. Gummies jelly jelly beans. Cotton candy topping cake. Gummies ice cream cake macaroon croissant sweet roll cupcake tootsie roll.
                 Gummies fruitcake biscuit cookie pie soufflé chocolate bar. Chupa chups toffee pudding macaroon cotton candy bear claw. Chocolate bar tart powder lemon drops. Lemon drops chocolate jelly-o marzipan chocolate bar jelly beans jelly marshmallow chupa chups. Pudding cake toffee sweet cookie tart macaroon. Toffee toffee marzipan chupa chups jelly. Ice cream cake brownie cotton candy bear claw pastry. Muffin jujubes chupa chups jelly beans candy donut lemon drops pudding carrot cake. Tart liquorice candy tiramisu chocolate bar macaroon topping.
