--- a/src/contact.html
+++ b/src/contact.html
@@ -42,7 +42,7 @@
                 <nav class="nav-menu" id="nav-menu">
                     <ul class="nav-slider">
                         <li class="nav-slider-item">
-                            <a href="../index.html">Accueil</a>
+                            <a href="../index.html">Home</a>
                         </li>
                         <li class="nav-slider-item">
                             <a href="../src/articles.html">Articles</a>
@@ -64,18 +64,18 @@
         <div id="contact-form-card">
             <form>
                 <div id="name-cont" class="complet">
-                    <label class="label" for="name">Nom :</label>
+                    <label class="label" for="name">Name :</label>
                     <input type="text" id="name" name="user_name">
                 </div>
                 <div id="mail-cont" class="complet">
-                    <label class="label" for="mail">e-mail :</label>
+                    <label class="label" for="mail">Mail :</label>
                     <input type="email" id="mail" name="user_mail">
                 </div>
                 <div id="msg-cont" class="complet">
                     <label class="label" for="msg">Message :</label>
                     <textarea id="msg" name="user_message"></textarea>
                 </div>
-                <button class="button" id="button">Envoyer</button>
+                <button class="button" id="button">Send</button>
             </form>
             <div class="popup-container hidden-container">
                 <div class="hidden modal"><p></p></div>
