forget translate contact title

--- a/src/contact.html
+++ b/src/contact.html
@@ -60,7 +60,7 @@
                 </nav>
             </div>
         </header>
-        <h2>Contactez-nous</h2>
+        <h2>Contact-us</h2>
         <div id="contact-form-card">
             <form>
                 <div id="name-cont" class="complet">
