--- a/src/articles.html
+++ b/src/articles.html
@@ -47,16 +47,16 @@
             <nav class="nav-menu" id="nav-menu">
                 <ul class="nav-slider">
                     <li class="nav-slider-item">
-                        <a href="../index.html">Accueil</a>
+                        <a href="../index.html">HOME</a>
                     </li>
                     <li class="nav-slider-item">
                         <a href="./articles.html">Articles</a>
                     </li>
                     <li class="nav-slider-item">
-                        <a href="ratings.html">Cours</a>
+                        <a href="ratings.html">Ratings</a>
                     </li>
                     <li class="nav-slider-item">
-                        <a href="team.html">Equipe</a>
+                        <a href="team.html">Team</a>
                     </li>
                     <li class="nav-slider-item">
                         <a href=""></a>
@@ -433,9 +433,9 @@
     </footer>
 
 
-    <script src="../assets/js/articles.js"></script>
-    <script src="../assets/js/darkmode.js"></script>
     <script src="../assets/js/script.js"></script>
+    <script src="../assets/js/darkmode.js"></script>
+    <script src="../assets/js/articles.js"></script>
     <script
             data-auto-replace-svg="nest"
             src="https://use.fontawesome.com/releases/v5.15.2/js/all.js"></script>
