fixed menu language

--- a/src/articles.html
+++ b/src/articles.html
@@ -47,7 +47,7 @@
             <nav class="nav-menu" id="nav-menu">
                 <ul class="nav-slider">
                     <li class="nav-slider-item">
-                        <a href="../index.html">HOME</a>
+                        <a href="../index.html">Home</a>
                     </li>
                     <li class="nav-slider-item">
                         <a href="./articles.html">Articles</a>
