--- a/src/articles.html
+++ b/src/articles.html
@@ -411,7 +411,7 @@
             <ul class="footer-contact">
                 <li class="footer-contact-item">
                     <a href="./contact.html">
-                        Contactez-nous
+                        Contact-us
                     </a>
                 </li>
             </ul>
